--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -21,7 +21,7 @@ body {
 .horizontal-line {
     position: absolute;
     top: 386px;
-    left: 0;
+    left: 0px;
     width: 100%;
     height: 1px;
     background-color: rgba(0, 0, 139, 0.1);
@@ -326,4 +326,5 @@ body {
         cursor: default;
         pointer-events: none;
     }
+
 }
